<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/prompt_edit_text"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/prompt_edit_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/negative_edit_text"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/negative_edit_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prompt_edit_text"/>

    <TextView
        android:id="@+id/steps_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/steps_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/negative_edit_text"/>

    <SeekBar
        android:id="@+id/steps_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:max="50"
        app:layout_constraintTop_toBottomOf="@id/steps_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sampler_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/steps_slider"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sampler_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/steps_slider"/>

    <Spinner
        android:id="@+id/sampler_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/sampler_options"
        app:layout_constraintTop_toBottomOf="@+id/sampler_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/generate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sampler_spinner"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/generate_button_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sampler_spinner"/>

</androidx.constraintlayout.widget.ConstraintLayout>
